# automatic-llvm-mca

./: .gitignore  CMakeLists.txt  LICENSE  README.md  analyze.py  analyze_distribution.cpp  analyze_str.py  arch.py  convergence_test.cpp  custom_a55_sched.cpp  custom_a55_sched.h  docs.md  frontend.cpp  frontend.h  ipc_relate.py  mca.cpp  mca_common.h  mca_insts_info.cpp  mca_main.cpp  mca_runner.cpp  mlp_check.cpp  mlp_logic.cpp  mlp_objdump.cpp  mlp_update.cpp  splitter.cpp
ModifiedTarget/AArch64/: AArch64Processors.td  AArch64SchedA55.td  AArch64SchedNeoverseN1.td  AArch64SchedNeoverseN2.td  AArch64SchedNeoverseV1.td
tests/: mlp_test.cpp  test_analyze.py  test_analyze_str.py  test_ipc_relate.py  test_mlp_better_io.py
